<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/previous"
        android:icon="@drawable/ic_action_previous"
        android:title="@string/previous"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/next"
        android:icon="@drawable/ic_action_next"
        android:title="@string/next"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/today"
        android:icon="@drawable/ic_action_last"
        android:title="@string/today"
        app:showAsAction="never" />

    <item
        android:id="@+id/random"
        android:icon="@drawable/ic_action_shuffle"
        android:title="@string/random"
        app:showAsAction="never" />

    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_action_favorite_list"
        android:title="@string/FavoriteList"
        app:showAsAction="never" />

</menu>