<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <com.zima.myxkcdviewer.ui.customviews.ImageTextButton
        android:id="@+id/ibFavorites"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="TODO"
        app:drawableOn="@drawable/ic_action_favorite_on"
        app:drawableOff="@drawable/ic_action_favorite_off"
        app:layout_constraintEnd_toStartOf="@+id/ibReadLoud"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleText="@string/AddToFavorites" />

    <com.zima.myxkcdviewer.ui.customviews.ImageTextButton
        android:id="@+id/ibReadLoud"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="TODO"
        app:drawable="@drawable/ic_action_read_loud"
        app:layout_constraintEnd_toStartOf="@+id/ibSave"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/ibFavorites"
        app:layout_constraintTop_toTopOf="parent"
        app:titleText="@string/ReadLoud" />


    <com.zima.myxkcdviewer.ui.customviews.ImageTextButton
        android:id="@+id/ibSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="TODO"
        app:drawable="@drawable/ic_action_download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/ibReadLoud"
        app:layout_constraintTop_toTopOf="parent"
        app:titleText="@string/Save" />


</androidx.constraintlayout.widget.ConstraintLayout>